Fix navbar X button wrong z index on mobile, check when touch pt leaves element bounds to clear effects

--- a/css/style.css
+++ b/css/style.css
@@ -2298,7 +2298,7 @@ code {
     left: 50%;
     transform: translateX(-50%);
     width: 80%;
-    z-index: 999;
+    z-index: 9991;
     display: flex;
     align-items: center;
     justify-content: space-between;
